# scroller

./: .gitignore  CMakeLists.txt  README.md  config-example.ini
include/: config.h  renderer.h  text_entity.h
src/: config.c  main.c  renderer.c  text_entity.c
